# CPP2

./: .gitignore  cmakelists.txt  coding-conventions-cmake.md
src/: CMakeLists.txt
src/client/: cmakelists.txt
src/client/src/: main.cpp
src/machiavelli/: CMakeLists.txt
src/machiavelli/src/: main.cpp  main.h
src/netw/: CMakeLists.txt
src/netw/include/: netw.h
src/netw/include/netw/telnet/: client.h  server.h  serverclient.h
src/netw/src/netw/telnet/: client.cpp  server.cpp
src/server/: cmakelists.txt
src/utils/: CMakeLists.txt
src/utils/include/utils/: definitions.h
src/utils/include/utils/cmd/: command.hpp  commandhandler.hpp
